kqueue.2: Mention EV_NODATA flag, which may be set in addition to EV_EOF.
* The EV_NODATA flag was added in 3bcb6e5e80cb05cecaddd866d4b15b428334b9aa.

--- a/lib/libc/sys/kqueue.2
+++ b/lib/libc/sys/kqueue.2
@@ -206,6 +206,10 @@ instead of the current state.
 Note that some filters may automatically set this flag internally.
 .It Dv EV_EOF
 Filters may set this flag to indicate filter-specific EOF condition.
+.It Dv EV_NODATA
+Filters may set this flag in addition to
+.Dv EV_EOF
+to indicate that there is no more data pending in the buffer.
 .It Dv EV_ERROR
 See
 .Sx RETURN VALUES
