kqueue.2: Improve explanation of EV_EOF for fifos.
* The EV_EOF flag can't be cleared with EV_CLEAR. For Fifos it will be
  cleared when a new reader (for EVFILT_WRITE) or writer (for EVFILT_READ)
  connects.

--- a/lib/libc/sys/kqueue.2
+++ b/lib/libc/sys/kqueue.2
@@ -273,8 +273,7 @@ When the last writer disconnects, the filter will set
 .Dv EV_EOF
 in
 .Fa flags .
-This may be cleared by passing in
-.Dv EV_CLEAR ,
+This will be cleared by the filter when a new writer connects,
 at which point the filter will resume waiting for data to become
 available before returning.
 .El
@@ -286,9 +285,8 @@ For sockets, pipes and fifos,
 will contain the amount of space remaining in the write buffer.
 The filter will set
 .Dv EV_EOF
-when the reader disconnects, and for the fifo case, this may be cleared
-by use of
-.Dv EV_CLEAR .
+when the reader disconnects, and for the fifo case, this will be cleared
+when a new reader connects.
 Note that this filter is not supported for vnodes.
 .Pp
 For sockets, the low water mark and socket error handling is
