hammer2 - Refactor dedup, fixes, optimizations
* Refactor the dedup code, reducing tracking complexity.  Also note that
  we cannot really depend on VM page caching for dedup tests.  Document why
  using bread() is better.

* Use a larger dedup heuristic table to improve dedup matching.

* Improve hammer2_io_getquick(), fix a bug where the dedup_delete code
  was improperly using it and could sometimes miss a dio structure due
  to the underlying buffer not being fully cached.

* Cap out at 16KB indirect blocks, instead of 64KB indirect blocks.  This
  significantly reduces meta-data overheads.

* For now remove IO invalidation, it was causing corruption due to bugs.
  This means that deleted meta-data will be flushed.  However, a certain
  amount of meta-data does not get immediately instantiated and file data
  chains are not instantiated unless the buffer cache gets flushed, so
  temporary files are still pretty cheap.

* Try to improve DIO's LRU recycling.

* Fix a brelse() that was supposed to be a bqrelse().  This improves
  meta-data caching which is desirable for dedup.

* Implement the 'always_compress' sysctl which disables the H2 compression
  heuristic that tries to detect uncompressable data.  If set, H2 will always
  try to compress.

--- a/sbin/hammer2/hammer2.8
+++ b/sbin/hammer2/hammer2.8
@@ -286,6 +286,14 @@ data.
 Hammer2 compression is only effective when it can reduce the size of dataset
 (typically a 64KB block) by one or more powers of 2.  A 64K block which
 only compresses to 40K will not yield any storage improvement.
+.Pp
+Generally speaking you do not want to set the compression mode to 'none',
+as this will cause blocks of all-zeros to be written as all-zero blocks,
+instead of holes.  The 'autozero' compression mode detects blocks of all-zeros
+and writes them as holes.  However, HAMMER2 will rewrite data in-place if
+the compression mode is set to 'none' and the check code is set to
+'disabled'.  Formal snapshots will still snapshot such files.  However,
+de-duplication will no longer function on the data blocks.
 .\" ==== setcheck ====
 .It Cm setcheck Ar check Op path...
 Set the check code as specified for any newly created elements at or under
@@ -312,6 +320,26 @@ Run a bulkfree pass on a HAMMER2 mount.
 You can specify any PFS for the mount, the bulkfree pass is run on the
 entire partition.
 Note that it takes two passes to actually free space.
+.El
+.Sh SYSCTLS
+.Bl -tag -width indent
+.It Va vfs.hammer2.dedup_enable (default on)
+Enables live de-duplication.  Any recently read data that is on-media
+(already synchronized to media) is tested against pending writes for
+compatibility.  If a match is found, the write will reference the
+existing on-media data instead of writing new data.
+.It Va vfs.hammer2.always_compress (default off)
+This disables the H2 compression heuristic and forces H2 to always
+try to compress data blocks, even if they look uncompressable.
+Enabling this option reduces performance but has higher de-duplication
+repeatability.
+.It Va vfs.hammer2.cluster_read (default 4)
+Set the amount of read-ahead clustering to perform.
+.It Va vfs.hammer2.cluster_write (default 0)
+Set the amount of write-behind clustering to perform.  This is disabled by
+default in order to give temporary files a chance to be deleted before
+media writes are committed.  Enabling this reduces buffer cache stress
+but causes file writes to flush to media more quickly.
 .El
 .Sh SETTING UP /etc/hammer2
 The 'rsainit' directive will create the
