--- a/usr.sbin/acpi/iasl/iasl.8
+++ b/usr.sbin/acpi/iasl/iasl.8
@@ -28,7 +28,7 @@
 .\" OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd July 28, 2017
+.Dd September 1, 2017
 .Dt IASL 8
 .Os
 .Sh NAME
@@ -187,7 +187,7 @@ Create verbose template files (full disassembly).
 .It Fl vt
 Dump binary table data in hex format within output file.
 .It Fl vw Ar message_id
-Disable specific warning or remark.
+Ignore specific error, warning or remark.
 .It Fl vx Ar message_id
 Expect a specific warning, remark, or error.
 .It Fl w Ar 1 | 2 | 3
