--- a/sbin/hammer2/hammer2.8
+++ b/sbin/hammer2/hammer2.8
@@ -333,13 +333,19 @@ This disables the H2 compression heuristic and forces H2 to always
 try to compress data blocks, even if they look uncompressable.
 Enabling this option reduces performance but has higher de-duplication
 repeatability.
-.It Va vfs.hammer2.cluster_read (default 4)
-Set the amount of read-ahead clustering to perform.
+.It Va vfs.hammer2.cluster_data_read (default 4)
+.It Va vfs.hammer2.cluster_meta_read (default 1)
+Set the amount of read-ahead clustering to perform on data and meta-data
+blocks.
 .It Va vfs.hammer2.cluster_write (default 0)
 Set the amount of write-behind clustering to perform.  This is disabled by
 default in order to give temporary files a chance to be deleted before
 media writes are committed.  Enabling this reduces buffer cache stress
 but causes file writes to flush to media more quickly.
+.It Va vfs.hammer2.bulkfree_tps (default 5000)
+Set bulkfree's maximum scan rate.  This is primarily intended to limit
+I/O utilization on SSDs and cpu utilization when the meta-data is mostly
+cached in memory.
 .El
 .Sh SETTING UP /etc/hammer2
 The 'rsainit' directive will create the
