--- a/sbin/hammer2/hammer2.8
+++ b/sbin/hammer2/hammer2.8
@@ -88,6 +88,18 @@ The mount also enables PFS configuration scanning for that filesystem.
 Add a cluster link entry to the volume header.
 The volume header can support up to 255 link entries.
 This feature is not currently used.
+.\" ==== destroy ====
+.It Cm destroy Ar path
+Destroy the specified directory entry in a hammer2 filesystem.  This bypasses
+all normal checks and will unconditionally destroy the directory entry.
+The underlying inode is not checked and, if it does exist, its nlinks count
+is not decremented.
+This directive should only be used to destroy a corrupted directory entry
+which no longer has a working inode.
+.Pp
+Note that this command may desynchronize the system namecache for the
+specified entry.  If this happens, you may have to unmount and remount the
+filesystem.
 .\" ==== disconnect ====
 .It Cm disconnect Ar target
 Delete a cluster link entry from the volume header.
@@ -337,11 +349,14 @@ repeatability.
 .It Va vfs.hammer2.cluster_meta_read (default 1)
 Set the amount of read-ahead clustering to perform on data and meta-data
 blocks.
-.It Va vfs.hammer2.cluster_write (default 0)
-Set the amount of write-behind clustering to perform.  This is disabled by
-default in order to give temporary files a chance to be deleted before
-media writes are committed.  Enabling this reduces buffer cache stress
-but causes file writes to flush to media more quickly.
+.It Va vfs.hammer2.cluster_write (default 4)
+Set the amount of write-behind clustering to perform in buffers.  Each
+buffer represents 64KB.  The default is 4 and higher values typically do
+not improve performance.  A value of 0 disables clustered writes.
+This variable applies to the underlying media device, not to logical
+file writes, so it should not interfere with temporary file optimization.
+Generally speaking you want this enabled to generate smoothly pipelined
+writes to the media.
 .It Va vfs.hammer2.bulkfree_tps (default 5000)
 Set bulkfree's maximum scan rate.  This is primarily intended to limit
 I/O utilization on SSDs and cpu utilization when the meta-data is mostly
