gpt(8): Add HAMMER and HAMMER2 support
This makes it possible to create HAMMER or HAMMER2 partitions
with simple commands such as:

  gpt add -t hammer2 /dev/device

--- a/sbin/gpt/gpt.8
+++ b/sbin/gpt/gpt.8
@@ -138,7 +138,7 @@ option allows the user to specify the partition type.
 The type is given as an UUID, but
 .Nm
 accepts
-.Cm efi , swap , ufs , hfs , linux , dfly ,
+.Cm efi , swap , ufs , hfs , linux , dfly , hammer, hammer2
 and
 .Cm windows
 as aliases for the most commonly used partition types.
