usr.sbin/fstyp: Add initial HAMMER2 support
-l option and multiple/partial volumes are not supported yet.

--- a/usr.sbin/fstyp/fstyp.8
+++ b/usr.sbin/fstyp/fstyp.8
@@ -28,7 +28,7 @@
 .\"
 .\" $FreeBSD$
 .\"
-.Dd April 14, 2016
+.Dd September 23, 2017
 .Dt FSTYP 8
 .Os
 .Sh NAME
@@ -68,6 +68,8 @@ ntfs
 ufs
 .It
 hammer
+.It
+hammer2
 .El
 .Pp
 Note that HAMMER filesystem consists of more than one volumes requires a path in blkdevs format.
@@ -111,6 +113,7 @@ type is not recognized.
 .Xr file 1 ,
 .Xr autofs 5 ,
 .Xr hammer 8 ,
+.Xr hammer2 8 ,
 .Xr mount 8
 .Sh HISTORY
 The
