sbin/newfs_hammer2: Fix typo in newfs_hammer2(8)
of of

--- a/sbin/newfs_hammer2/newfs_hammer2.8
+++ b/sbin/newfs_hammer2/newfs_hammer2.8
@@ -53,7 +53,7 @@ volume on the specified block device.
 .Nm HAMMER2
 volumes can contain any number of named PFSs (Pseudo FileSystems).
 Each named PFS can operate independently or be a constituent of
-of a larger cluster.
+a larger cluster.
 Regardless, you must still format each block device separately using
 this command.
 .Pp
