--- a/usr.bin/kcollect/kcollect.8
+++ b/usr.bin/kcollect/kcollect.8
@@ -38,6 +38,7 @@
 .Op Fl o Ar fields
 .Op Fl b Ar file
 .Op Fl d Ar file
+.Op Fl r Ar file
 .Op Fl f
 .Op Fl l
 .Op Fl g
@@ -73,14 +74,14 @@ Dump the data to a dbm database, creating the database if necessary.
 Data is indexed by gmt time, which will be calculated from the ticks.
 Duplicate tuples are ignored.  The database will retain data from prior
 runs.
-.It Fl b Ar file
+.It Fl d Ar file
 Load the data from a dbm database instead of loading the active data
 from the current machine.
-.Pp
-THIS IS A TODO OPTION, NOT YET IMPLEMENTED.
-.Nm
-is smart and will not overwrite the record if it exactly matches what
-would be written.
+.It Fl r Ar file
+This will overwrite headers stored in the specified dbm database with the
+in-memory headers.  This can be used to renormalize saved historical dbm
+files when machine specs change, or if the dbm is somehow missing the
+header fields.
 .It Fl g
 Generate gnuplot output for the data.
 .It Fl s
