--- a/sbin/ipfw/ipfw.8
+++ b/sbin/ipfw/ipfw.8
@@ -2,7 +2,7 @@
 .\" $FreeBSD: src/sbin/ipfw/ipfw.8,v 1.63.2.33 2003/02/04 01:36:02 brueffer Exp $
 .\" $DragonFly: src/sbin/ipfw/ipfw.8,v 1.20 2008/11/23 21:55:52 swildner Exp $
 .\"
-.Dd September 20, 2017
+.Dd September 27, 2017
 .Dt IPFW 8
 .Os
 .Sh NAME
@@ -777,6 +777,13 @@ Matches any network or host addresses in the
 .Cm table
 specified by the
 .Ar number .
+.It Cm [ Ns Ar ifX Ns Cm ]
+Matches the first IPv4 address assigned to the
+.Ar ifX .
+It is intended to help matching the IPv4 address assigned to the
+.Ar ifX
+dynamically,
+e.g. by DHCP.
 .It Ar numeric-ip | hostname
 Matches a single IPv4 address, specified as dotted-quad or a hostname.
 Hostnames are resolved at the time the rule is added to the firewall list.
